# CTMamba

./: .gitignore  LICENSE  README.md  conda_list.txt  environment.yml  eval.py  make_splits.py  prepare_raw_to_processed.py  pyproject.toml  requirements_freeze.txt  run_10runs_and_mean.py  run_ablations.py  run_multiseed.py  train.py
baselines/: BASELINES.lock.txt
configs/baselines/: hanchuan.yaml  honghu.yaml  houston2013.yaml  pu.yaml
configs/datasets/: hanchuan.yaml  honghu.yaml  houston2013.yaml  pavia_university.yaml
configs/model/: vssm3d_hanchuan.yaml
configs/train/: hanchuan.yaml  honghu.yaml  houston2013.yaml  pu.yaml
models/: __init__.py  ctmamba.py  moe.py  spatial_scan.py  spectral_scan.py  triscan_mamba.py  vssm3d_moe.py
scripts/: eval.py  fetch_baselines.sh  make_splits.py  prepare_raw_to_processed.py  run_10runs_and_mean.py  run_baselines_10runs_and_mean.py  train.py
scripts/baselines/: train_3dss_mamba.py  train_a2s2k.py  train_cnn.py  train_gsc_vit.py  train_igroupss_mamba.py  train_mamba_family_common.py  train_mambahsi.py  train_morphformer.py  train_spectralformer.py  train_ssftt.py  train_svm.py
splits/random/: hanchuan_perclass_seeds.csv  hanchuan_seed0.json  hanchuan_seed1.json  hanchuan_seed2.json  hanchuan_seed3.json  hanchuan_seed4.json  hanchuan_seed5.json  hanchuan_seed6.json  hanchuan_seed7.json  hanchuan_seed8.json  hanchuan_seed9.json  honghu_perclass_seeds.csv  (+22 more)
tests/: test_import.py
utils/: __init__.py  classification.py  engine.py  hsi_dataset.py  hsi_preprocess.py  io.py  lr_schedulers.py  seed.py
(+17 files in other folders)
