[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsi3d"
version = "0.1.0"
description = "HSI-3D VSSM + MoE + MBM pretrain + evidential uncertainty (JSTARS-oriented)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "torch>=2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
