[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsi3d"
version = "0.1.2"
description = "Hyperspectral image classification with VSSM3D and MoE"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "TriScanMamba Contributors" }
]
keywords = ["hyperspectral", "remote-sensing", "classification", "pytorch"]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "torch>=2.1",
  "h5py>=3.8",
  "scikit-learn>=1.3",
  "joblib>=1.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
